# Dulus

./: .dockerignore  .env.example  .gitattributes  .gitignore  CNAME  Dockerfile  MANIFEST.in  README.md  agent.py  analytics.py  auto_context_loader.py  batch_api.py  claude_code_watcher.py  cloudsave.py  common.py  compaction.py  config.py  context.py  context_integration.py  display_blocks.py  docker-compose.yml  dulus.py  dulus_explorer.html  dulus_gui.py  falcon.py  falcon_gui.py  governance.py  index.html  input.py  install.ps1  install.sh  license_manager.py  license_server.py  offload_helper.py  personality_config.py  profiles.py  providers.py  pyproject.toml  pyrightconfig.json  requirements.txt  (+19 more)
.falcon-context/: tasks.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  docker.yml
assets/js/: dulus-analytics-config.js
backend/: __init__.py  agents_bridge.py  compressor.py  context.py  githook.py  marketplace.py  mempalace_bridge.py  paths.py  personas.py  plugins.py  server.py  tasks.py
checkpoint/: store.py
data/: __init__.py  active_persona.json  context.json  marketplace.json  personas.json  tasks.json
data/plugins/composio/: plugin.json  plugin_tool.py
data/plugins/composio/composio_plugin/: __init__.py  session_manager.py  tool_generator.py
docs/: BRAND_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md  INVESTOR_BRIEF.md  README.md  README_AR.md  README_EN.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  README_ZH.md  SECURITY.md  __init__.py  api.html  architecture.md  azure-speech-template.json  generate.py  index.html  news.md  particle-playground.html  preview.html  whitepaper.md
docs/dashboard/: index.html
docs/personas/: index.html
docs/uploads/: particle-playground.html
dulus-0.2.0/: webchat.py
dulus-0.2.0/voice/: __init__.py
dulus_mcp/: __init__.py  client.py  config.py  hub.py  types.py
dulus_tools/: __init__.py  add_dir_manager.py  afk_mode.py  approval_runtime.py  background_tasks.py  clipboard_utils.py  diff_visualizer.py  export_import.py  hook_engine.py  notification_manager.py  session_fork.py  shell_mode.py  todo_visualizer.py  wire_events.py  yolo_mode.py
falcon_mcp/: __init__.py  config.py
gui/: __init__.py  agent_bridge.py  chat_widget.py  main_window.py  personas.py  sandbox_server.py  session_utils.py  settings_dialog.py  sidebar.py  tasks_view.py  themes.py  tool_panel.py
gui/dulus_orchestrator/: index.html
mcp/: types.py
memory/: __init__.py  audit.py  consolidator.py  context.py  offload.py  palace.py  scan.py  sessions.py  store.py  tools.py  types.py  vector_search.py
multi_agent/: __init__.py  subagent.py  tools.py
plugin/: __init__.py  autoadapter.py  loader.py  recommend.py  store.py  types.py
rtk/: README.md
sandbox/: __init__.py  index.html  package-lock.json  package.json  vite.config.ts
sandbox/src/: App.tsx  index.css
sandbox/src/apps/: AgentMonitor.tsx  AppRouter.tsx  ArchiveManager.tsx  AsciiArt.tsx  Browser.tsx  Calculator.tsx  Calendar.tsx  Chat.tsx  Contacts.tsx  Email.tsx  JsonFormatter.tsx  MemoryManager.tsx  Notes.tsx  PasswordManager.tsx  Reminders.tsx  RssReader.tsx  ScreenRecorder.tsx  Settings.tsx  SkillsLauncher.tsx  Spreadsheet.tsx  SystemMonitor.tsx  TaskManager.tsx  Terminal.tsx  Todo.tsx  VoiceRecorder.tsx  Weather.tsx  registry.ts
sandbox/src/components/: AppContainer.tsx  BootSequence.tsx  ContextMenu.tsx  Desktop.tsx  LoginScreen.tsx  NotificationCenter.tsx  NotificationSystem.tsx  TopPanel.tsx  WindowFrame.tsx
sandbox/src/hooks/: index.ts  useAutoOpenChat.ts  useDulusAgents.ts  useDulusChat.ts  useDulusEvents.ts  useDulusHealth.ts  useDulusMemory.ts  useDulusSkills.ts  useDulusTasks.ts  useFileSystem.ts  useOSStore.tsx  useSkillBridge.ts  useSystemBattery.ts  useSystemNetwork.ts  useSystemVolume.ts
sandbox/src/lib/: dulus-api.ts
sandbox/src/types/: index.ts
sandbox/src/utils/: assets.ts
skill/: builtin.py  clawhub.py  loader.py
skill/bundled/: README.md
skill/bundled/obsidian-markdown/: SKILL.md
task/: __init__.py  store.py  tools.py
tests/: e2e_checkpoint.py  e2e_commands.py  e2e_plan_mode.py  test_afk_yolo.py  test_approval_runtime.py  test_background_task_tools.py  test_background_tasks.py  test_checkpoint.py  test_clipboard_utils.py  test_compaction.py  test_composio_tool_generator.py  test_diff_visualization.py  test_display_blocks.py  test_export_import.py  test_hook_engine.py  test_injection_fix.py  test_license.py  test_mcp.py  test_memory.py  test_memory_home_resolution.py  test_notification_manager.py  test_plugin.py  test_session_fork.py  test_shell_mode.py  test_steer_input.py  test_task.py  test_telegram_buffer.py  test_think_tool.py  test_todo_tool.py  test_todo_visualization.py  test_tool_registry.py  test_voice.py  test_wire_events.py
tools/: build_sandbox_bundle.py
ui/: __init__.py  input.py  render.py
uploads/: README.md  particle-playground.html
voice/: __init__.py  audio_utils.py  keyterms.py  recorder.py  stt.py  tts.py  wake_word.py
webbridge/: __init__.py  core.py  tools.py
webchat_ui/: index.html
