[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dulus"
version = "0.2.74"
description = "Spanish-first multi-provider AI CLI — 14 NVIDIA models free, Mesa Redonda, voice, TTS, RTK token reducer, MemPalace"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0"}
authors = [{name = "KevRojo"}]
keywords = [
    "ai", "cli", "llm", "claude", "gemini", "nvidia", "openai",
    "kimi", "deepseek", "qwen", "ollama", "agent", "tts", "voice",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Terminals",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.30.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "Flask>=3.1.3",
    "bubblewrap-cli>=1.0.0",
    "customtkinter>=5.2.0",
    "Pillow>=10.0.0",
    "typing-extensions>=4.10.0",
    # Composio Tool Router — bundled plugin needs this to talk to 1000+ apps
    # without going through MCP. Only ~1MB on the wheel; worth it as a default.
    "composio>=1.0.0rc2",
    # HTML parsing — used by web scraping flows, harvest commands,
    # and several plugins. Tiny dep; ship it by default.
    "beautifulsoup4>=4.12.0",
]

# mempalace pulls chromadb (26 transitive deps incl. numpy + onnxruntime),
# which on termux/aarch64 has no wheels and on regular installs sends pip's
# resolver into a backtracking loop trying to reconcile typing-extensions /
# pydantic / httpx ranges. Keeping it optional lets `pip install dulus` succeed
# in seconds everywhere; power users opt in with `pip install dulus[memory]`
# (or `dulus[full]`) when they want MemPalace per-turn injection.
[project.optional-dependencies]
memory = ["mempalace>=3.3.4"]
voice = ["sounddevice", "elevenlabs>=1.0.0"]
webbridge = ["playwright>=1.40.0"]
full = ["mempalace>=3.3.4", "sounddevice", "elevenlabs>=1.0.0", "playwright>=1.40.0"]

[project.scripts]
dulus = "dulus:main"

[project.urls]
Homepage = "https://github.com/KevRojo/Dulus"
Repository = "https://github.com/KevRojo/Dulus"
Issues = "https://github.com/KevRojo/Dulus/issues"

# ── Build config ────────────────────────────────────────────────────────────
# Fast-path: ship every top-level .py as a module + every subpackage with
# its __init__.py. Cleaner restructure can come later.
[tool.setuptools]
py-modules = [
    "agent",
    "batch_api",
    "claude_code_watcher",
    "clipboard_utils",
    "cloudsave",
    "common",
    "compaction",
    "config",
    "context",
    "dulus",
    "dulus_gui",
    "input",
    "license_manager",
    # NOTE: skipping "memory" — there's a package memory/ that supersedes
    # the legacy memory.py shim. Same import name; can't ship both.
    "offload_helper",
    "providers",
    "skills",
    "soul",
    "spinner",
    "string_utils",
    "subagent",
    "tmux_offloader",
    "tmux_tools",
    "tool_registry",
    "tools",
    "webchat",
    "webchat_server",
    "welcome",
]

[tool.setuptools.packages.find]
where = ["."]
include = [
    "backend*",
    "checkpoint*",
    "data*",
    "docs*",
    "gui*",
    "dulus_mcp*",
    "dulus_tools*",
    "memory*",
    "multi_agent*",
    "plugin*",
    "sandbox*",
    "skill*",
    "task*",
    "ui*",
    "voice*",
    "webbridge*",
]
exclude = [
    "tests*",
    "__pycache__*",
    "sandbox/node_modules*",
    "sandbox/.dulus-context*",
]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.jsx", "*.ts", "*.tsx", "*.svg", "*.json", "*.md", "*.png", "*.jpg", "*.jpeg", "*.txt", "*.py"]
